<resources>
    <string name="txt_reading">Sugerencias</string>
    <string name="txt_please_tags">Suggested Tags</string>
    <string name="or">O</string>
    <string name="skip_now">Salte por ahora</string>
    <string name="app_name">Primera Noticia</string>
    <string name="title_news">Primera Noticia</string>
    <string name="title_explore">Primera Noticia Explore</string>
    <string name="name_news">Inicio</string>
    <string name="name_video">Videos</string>
    <string name="name_notification">Notification</string>
    <string name="name_attention">Tags</string>
    <string name="title_search">Buscar</string>
    <string name="title_support">FQA y Apoyo</string>
    <string name="title_about">Sobre nosotros</string>
    <string name="txt_account_country">País</string>
    <string name="txt_account_language">Idioma</string>
    <string name="title_account">Nombre</string>
    <string name="title_email">Correo</string>
    <string name="title_paypal">PayPal</string>
    <string name="title_setpwd">Cambiar la contraseña</string>
    <string name="title_channel">Canales</string>
    <string name="name_news_title">Headline information</string>
    <string name="name_read">Explorar</string>
    <string name="name_interest">Hobby</string>
    <string name="name_mine">Cuenta</string>
    <string name="name_photo">sense of sight</string>
    <string name="name_comprehensive">Integrated</string>
    <string name="name_more">Más</string>
    <string name="name_jj">Primera Noticia</string>
    <string name="title_web">  Web  </string>
    <string name="title_local">Reading</string>
    <string name="edit_writecomment">Toque para escribir comentarios ...</string>
    <string name="txt_logout">Log Out</string>
    <string name="txt_tip">Consejos</string>
    <string name="txt_set">Ajustes</string>
    <string name="txt_Channel_close">Volver a casa</string>
    <string name="txt_complete">Hecho</string>
    <string name="txt_progress_loading">Cargando…</string>
    <string name="txt_progress_loading3">Eliminación de la colección ...</string>
    <string name="txt_progress_loading4">Switching in progress…</string>
    <string name="txt_comment">Comentario</string>
    <string name="txt_table_name">Section Name</string>
    <string name="txt_account">Nombre de usuario</string>
    <string name="txt_current_load">Acaba de cargar hasta aquí, haga clic en actualizar</string>
    <string name="txt_again_refresh"></string>
    <string name="txt_weixin">  WeChat   </string>
    <string name="txt_sina">Sina Weibo</string>
    <string name="txt_pyq">WeChat circle of friends</string>
    <string name="txt_qq">Phone QQ</string>
    <string name="txt_copy">Copy Link</string>
    <string name="txt_open">Browser</string>
    <string name="txt_open_top">View Original Web</string>
    <string name="txt_qq_space">QQ Space</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_renren">   renren  </string>
    <string name="txt_my_email">Correo electrónico</string>
    <string name="txt_my_paypal">PayPal</string>
    <string name="txt_withdraw_history">Withdraw History</string>
    <string name="txt_withdraw">Withdraw</string>
    <string name="txt_credit">Credits</string>
    <string name="txt_availintegral">Available Credits</string>
    <string name="txt_integral">Available Credits</string>
    <string name="txt_credits_history">Credits Statement</string>
    <string name="txt_policies">Policies</string>
    <string name="txt_terms">Términos de Uso</string>
    <string name="txt_forget_pwd">¿Olvidaste tu contraseña?</string>
    <string name="txt_have_account">¿Ya tienes una cuenta? registrarse</string>
    <string name="txt_read_agree_login">Stay signed in</string>
    <string name="txt_maohap">\t\t</string>
    <string name="txt_term_tips">In clicking \"Sign In\" or \"Sign in by Facebook\" you are agreeing to the </string>
    <string name="txt_term_tips1">Al hacer clic en "Registrarse", acepta los  </string>
    <string name="txt_term_tips2"> términos y condiciones.</string>
    <string name="txt_exit_app">Toque de nuevo para salir</string>
    <string name="tip_cannel">Cancelar</string>
    <string name="txt_save_success">guardar éxito</string>
    <string name="txt_save_fail">Guardar falló</string>
    <string name="txt_save">Conservar</string>
    <string name="txt_error_code">El código  no es válido,por favor introduzca de nuevo</string>
    <string name="txt_error_token">You have not logged in, or COOKIES has failed, please log in again</string>
    <string name="txt_time1">Hace 3 minutos</string>
    <string name="txt_time2">Hace 5 minutos</string>
    <string name="txt_time3">Hace 10 minutos</string>
    <string name="txt_time4">Hace 15 minutos</string>
    <string name="txt_time5">Hace 30 minutos</string>
    <string name="txt_time6">Hace 1 hora</string>
    <string name="txt_time7">Hace 2 horas</string>
    <string name="txt_time8">Hace 3 horas</string>
    <string name="txt_time9">Hace 6 horas</string>
    <string name="txt_time10">Hace 12 horas</string>
    <string name="txt_time11">Hace 24 horas</string>
    <string name="txt_time12">Hace 2 días</string>
    <string name="txt_time13">Hace 3 días</string>
    <string name="txt_time14">Hace 3 días</string>
    <string name="name_just">Justo</string>
    <string name="txt_button3">OK</string>
    <string name="txt_breaktip">Noticias de última hora</string>
    <string name="txt_button_view">Ver</string>
    <string name="txt_button18">Enviar</string>
    <string name="txt_button24">Sign in by Facebook</string>
    <string name="txt_button25">Guardar</string>
    <string name="txt_button26">Commit</string>
    <string name="txt_button27">Siguiente</string>
    <string name="txt_edit_hint4">Contraseña nueva</string>
    <string name="txt_edit_hint5">Repetir la contraseña</string>
    <string name="txt_edit_hint32">Correo electrónico / Nombre de usuario</string>
    <string name="txt_edit_hint36">PayPal</string>
    <string name="txt_edit_hint38">Withdraw value cannot exceed credits</string>
    <string name="txt_edit_hint37">Contraseña actual</string>
    <string name="txt_edit_hint40">Código</string>
    <string name="txt_contnet23">content</string>
    <string name="txt_contnet27">Limpiar historia de búsqueda</string>
    <string name="tip_point_large">Withdraw value cannot exceed credits</string>
    <string name="tip_point_10000">You only can withdraw 10,000 each time</string>
    <string name="tip_pwd_input_error_old">Su contraseña actual no cumple con la longitud requerida (6 a 25 caracteres)</string>
    <string name="tip_pwd_input_error">Su nueva contraseña no cumple con la longitud requerida (6 a 25 caracteres)</string>
    <string name="tip_pwd_input_two_diff">Las contraseñas no coinciden</string>
    <string name="tip_pwd_input_new_old">No se pueden iguales la contraseña actual y la nueva.</string>
    <string name="tip_set_pwd_suc">Modificar la contraseña de éxito</string>
    <string name="tip_set_pwd_fal">No modificar la contraseña de éxito</string>
    <string name="tip_set_pwd_old_null">The current password cannot be empty</string>
    <string name="tip_verification_code_send_fail">El correo electrónico no se envió</string>
    <string name="old_pwd_not_right">Contraseña invalida</string>
    <string name="tip_dialog_unlongin">Inicie sesión para continuar</string>
    <string name="tip_dialog_unlongin_token">Token expirado, por favor, inicie sesión</string>
    <string name="tip_login_success">Iniciar sesión</string>
    <string name="tip_login_failure">El correo electrónico o la contrase?a que ingresaste no coincide</string>
    <string name="tip_regist_failure">Registration failed, Please re-register</string>
    <string name="tip_comm_nocontent">Escriba su comentario ...</string>
    <string name="tip_comm_vote_myself">Can not thump up for yourself comment</string>
    <string name="tip_comm_too_long">Comentario demasiado largo, máximo 2000 caracteres</string>
    <string name="tip_dialog_title">Consejos</string>
    <string name="tip_dialog_title5">Cambiar la contraseña</string>
    <string name="tip_dialog_title12">¿Log Out ?</string>
    <string name="tip_dialog_longin">Por favor sign in</string>
    <string name="tip_net_fault">No hay conexión de red, inténtalo de nuevo.</string>
    <string name="tip_search_key_null">Please enter search entry</string>
    <string name="tip_search_content_null">Empty search result</string>
    <string name="tip_comment_send_fal">Error de comentario</string>
    <string name="tip_newsdetail_vote_repeat">¡Por favor no dé LIKES dos veces！</string>
    <string name="tip_collect_fal">Marcador fallido, vuelve a intentarlo</string>
    <string name="tip_canel_collect_fal">Cancelar fracaso de la colección</string>
    <string name="tip_loaddata_failure">El servidor está ocupado, por favor solicite de nuevo</string>
    <string name="tip_loaddata_null">Sin datos</string>
    <string name="tip_loaddata_timeout">Horas extras, por favor inténtelo de nuevo</string>
    <string name="tip_loaddata_pushnull">No datos,por favor inténtelo de nuevo</string>
    <string name="tip_recomment1"></string>
    <string name="tip_recomment2">Noticias nuevas</string>
    <string name="name_title_find_pwd">¿Ha olvidado su contraseña</string>
    <string name="name_title_login">Registrarse</string>
    <string name="tip_login_fail">Fallo de inicio de sesión</string>
    <string name="login_password">Contraseña</string>
    <string name="name_title_register">Crear</string>
    <string name="register_pwd_no_equals">Las contraseñas no coinciden</string>
    <string name="register_failure">Fallo en el Registro</string>
    <string name="resgister_email_wrong">Email inválido</string>
    <string name="txt_jump_1">Ir a la pantalla de inicio de sesión después de</string>
    <string name="name_title_comment">Comentarios</string>
    <string name="name_title_collect">Marcador</string>
    <string name="name_title_collect_title">¿Está seguro de borrar la colección?</string>
    <string name="name_title_share">Compartir</string>
    <string name="txt_share1">This is what I share in primera noticia</string>
    <string name="txt_share2">Seleccione el software para enviar,Por favor</string>
    <string name="txt_share5">The connection has been copied to the clipboard</string>
    <string name="txt_share_tofriend">Compartir con amigos</string>
    <string name="txt_share_content">Primera Noticia - Una Aplicación de Noticias Hecha Para Ti</string>
    <string name="txt_tixian1">Withdraw succeed</string>
    <string name="txt_tixian5">PIN</string>
    <string name="txt_tixian4">Available Credits</string>
    <string name="txt_tixian_tip1">Withdraw fail, please contact support</string>
    <string name="txt_tixian_tip2">Please set up PIN first</string>
    <string name="txt_tixian_tip3">Invalid PIN</string>
    <string name="txt_tixian_tip4">Please link paypal first</string>
    <string name="txt_tixian_tip5">withdrawal limit:$5</string>
    <string name="txt_tixian_tip6">(withdrawal limit:$5)</string>
    <string name="txt_date">Date</string>
    <string name="txt_state">Status</string>
    <string name="txt_worth">Amounts</string>
    <string name="txt_tixian_pending">Pending</string>
    <string name="txt_tixian_processed">Processed</string>
    <string name="txt_tixian_colose">Closed</string>
    <string name="txt_paypal_changepaypal">Relink Paypal</string>
    <string name="txt_paypal_changepwd">Change PIN</string>
    <string name="txt_paypal_pin">PIN</string>
    <string name="txt_paypal_reenter_pin">Re-enter PIN</string>
    <string name="tip_dialog_updatetitle">Hay una nueva versión de Primera Noticia disponible. Por favor, actualiza a la versión</string>
    <string name="tip_dialog_nowupdate">Actualizar</string>
    <string name="tip_dialog_skipthis">Saltar esta versión</string>
    <string name="tip_dialog_cancel">La próxima vez</string>
</resources>