<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_parent"
    style="@style/bg_fw"
    android:background="@drawable/my_help_center_button2x"
    android:orientation="vertical"
    skin:enable="true">


    <TextView
        android:id="@+id/txt_title"
        style="@style/bg_fw"
        android:layout_marginBottom="@dimen/margin_bottom_10"
        android:layout_marginTop="@dimen/margin_top_15"
        android:gravity="center"
        android:text="@string/tip_dialog_title"
        android:textColor="@color/day_text_color_black"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/tip_content"
        style="@style/bg_fw"
        android:layout_marginBottom="@dimen/margin_top_25"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="center_horizontal"
        android:text="@string/tip_dialog_updatetitle"
        android:textColor="@color/day_text_color_737373"
        android:textSize="@dimen/text_size_14" />

    <View
        style="@style/view_line_1px"
        android:background="@color/day_line1_color" />

    <TextView
        android:id="@+id/txt_nowupdate"
        style="@style/bg_fw"
        android:paddingTop="@dimen/margin_top_15"
        android:paddingBottom="@dimen/margin_bottom_15"
        android:gravity="center_horizontal"
        android:text="@string/tip_dialog_nowupdate"
        android:textColor="@color/day_text_color_red"
        android:textSize="@dimen/text_size_16" />
    <View
        style="@style/view_line_1px"
        android:background="@color/day_line1_color" />

    <TextView
        android:id="@+id/txt_skip"
        style="@style/bg_fw"
        android:paddingTop="@dimen/margin_top_15"
        android:paddingBottom="@dimen/margin_bottom_15"
        android:gravity="center_horizontal"
        android:text="@string/tip_dialog_skipthis"
        android:textColor="@color/day_text_color"
        android:textSize="@dimen/text_size_16" />
    <View
        style="@style/view_line_1px"
        android:background="@color/day_line1_color" />

    <TextView
        android:id="@+id/txt_cancel"
        style="@style/bg_fw"
        android:paddingTop="@dimen/margin_top_15"
        android:paddingBottom="@dimen/margin_bottom_15"
        android:gravity="center_horizontal"
        android:text="@string/tip_dialog_cancel"
        android:textColor="@color/day_text_color"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>