<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        style="@style/bg_ff"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_email"
            style="@style/base_edit_h60"
            android:gravity="center"
            android:hint="@string/txt_my_email"
            android:drawableLeft="@drawable/icon_email"
            android:paddingLeft="@dimen/margin_30"
            android:paddingRight="@dimen/margin_40"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_text_color_5black" />

        <EditText
            android:id="@+id/edit_pwd"
            style="@style/base_edit_h60"
            android:gravity="center"
            android:hint="@string/login_password"
            android:drawableLeft="@drawable/icon_paw1"
            android:paddingLeft="@dimen/margin_30"
            android:paddingRight="@dimen/margin_40"
            android:inputType="textPassword"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_text_color_5black" />

        <EditText
            android:id="@+id/edit_pwd_ok"
            style="@style/base_edit_h60"
            android:gravity="center"
            android:drawableLeft="@drawable/icon_paw2"
            android:paddingLeft="@dimen/margin_30"
            android:paddingRight="@dimen/margin_40"
            android:hint="@string/txt_edit_hint5"
            android:inputType="textPassword"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <Button
            android:id="@+id/btn_sing_up"
            style="@style/btn_blue_f_40"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/btn_red_sel_2"
            android:text="@string/name_title_register"
            android:textColor="@color/word_white_red_press"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <TextView
            android:id="@+id/have_account"
            style="@style/bg_ww"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top_15"
            android:text="@string/txt_have_account"
            android:textColor="@color/word_313131_737373"
            android:textSize="@dimen/text_size_12"
            skin:enable="true"
            android:visibility="gone"/>

        <LinearLayout
            style="@style/bg_fw"
            android:layout_marginTop="@dimen/margin_top_15"
            android:gravity="center"
            skin:enable="true">

            <TextView
                android:id="@+id/txt_term"
                style="@style/bg_ww"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/txt_term_tips1"
                android:textSize="@dimen/text_size_12"
                skin:enable="true" />
        </LinearLayout>

    </LinearLayout>

    <com.baiyi.jj.app.views.MyLoadingBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        skin:enable="true" />
</RelativeLayout>