<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_parent"
    style="@style/bg_fw"
    android:background="@drawable/my_help_center_button2x"
    android:orientation="vertical"
    skin:enable="true">


    <TextView
        android:id="@+id/txt_title"
        style="@style/bg_fw"
        android:layout_marginBottom="@dimen/margin_bottom_10"
        android:layout_marginTop="@dimen/margin_top_15"
        android:gravity="center"
        android:text="@string/tip_dialog_title"
        android:textColor="@color/day_text_color_black"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/tip_content"
        style="@style/bg_fw"
        android:layout_marginBottom="@dimen/margin_bottom_15"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="center_horizontal"
        android:text="@string/tip_dialog_title12"
        android:textColor="@color/day_text_color_737373"
        android:textSize="@dimen/text_size_14" />

    <View
        style="@style/view_line_1px"
        android:background="@color/day_line1_color" />

    <LinearLayout
        style="@style/bg_fw"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quit_cancel"
            style="@style/bg_fw"
            android:layout_weight="1"
            android:background="@drawable/selector_news_item"
            android:paddingBottom="@dimen/margin_bottom_15"
            android:paddingTop="@dimen/margin_top_15"
            android:text="@string/tip_cannel"
            android:textColor="@color/day_text_color_737373"
            android:textSize="@dimen/text_size_16" />

        <View
            style="@style/view_line_1px_shu"
            android:background="@color/day_line1_color" />

        <Button
            android:id="@+id/quit_sure"
            style="@style/bg_fw"
            android:layout_weight="1"
            android:background="@drawable/selector_news_item"
            android:paddingBottom="@dimen/margin_bottom_15"
            android:paddingTop="@dimen/margin_top_15"
            android:text="@string/txt_button3"
            android:textColor="@color/day_text_color_737373"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</LinearLayout>