<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/day_bg_color">


    <LinearLayout
        style="@style/bg_ff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eidt_account_name"
            style="@style/base_edit_h50"
            android:gravity="center"
            android:hint="@string/txt_edit_hint36"
            android:textColor="@color/day_text_color_737373"
            android:textSize="@dimen/text_size_15"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_line1_color" />

        <EditText
            android:id="@+id/eidt_pwd"
            style="@style/base_edit_h50"
            android:gravity="center"
            android:hint="@string/txt_paypal_pin"
            android:textColor="@color/day_text_color_737373"
            android:textSize="@dimen/text_size_15"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_line1_color" />

        <EditText
            android:id="@+id/eidt_pwd_ok"
            style="@style/base_edit_h50"
            android:gravity="center"
            android:hint="@string/txt_paypal_reenter_pin"
            android:textColor="@color/day_text_color_737373"
            android:textSize="@dimen/text_size_15"
            skin:enable="true" />

        <Button
            android:id="@+id/btn_save_paypal"
            style="@style/btn_blue_f_40"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_red_sel_2"
            android:text="@string/txt_button25"
            android:textColor="@color/word_white_red_press"
            android:textSize="@dimen/text_size_16"
            skin:enable="true" />

    </LinearLayout>

    <com.baiyi.jj.app.views.MyLoadingBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        skin:enable="true" />
</RelativeLayout>