<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bg_ff"
    android:background="@color/day_bg_color"
    skin:enable="true">

    <LinearLayout
        style="@style/bg_ff"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_email_code"
            style="@style/base_edit_h60"
            android:gravity="center"
            android:hint="@string/txt_edit_hint40"
            android:inputType="text"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_text_color_5black" />

        <EditText
            android:id="@+id/edit_pwd1"
            style="@style/base_edit_h60"
            android:gravity="center"
            android:hint="@string/txt_edit_hint4"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <View
            style="@style/view_1px_margin_15"
            android:background="@color/day_text_color_5black" />

        <EditText
            android:id="@+id/edit_pwd2"
            style="@style/base_edit_h60"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:hint="@string/txt_edit_hint5"
            android:inputType="textPassword"
            android:textColor="@color/day_text_color_black"
            android:textSize="@dimen/text_size_17"
            skin:enable="true" />

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_blue_f_40"
            android:background="@drawable/btn_red_sel_2"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/txt_save"
            android:textColor="@color/word_white_red_press"
            android:textSize="@dimen/text_size_16"
            skin:enable="true" />

    </LinearLayout>

    <com.baiyi.jj.app.views.MyLoadingBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        skin:enable="true" />

</RelativeLayout>