<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    style="@style/bg_ff"
    android:background="@color/day_bg_color"
    skin:enable="true">

    <LinearLayout
        style="@style/bg_ff"
        android:orientation="vertical">

        <LinearLayout
            style="@style/btn_item_selector_top_bottom_10"
            android:layout_height="30dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:background="@color/day_bg_color_f6f6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/bg_ww"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/txt_date"
                android:textColor="@color/default_color_313131_white"
                android:textSize="@dimen/text_size_18" />

            <TextView
                style="@style/bg_ww"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/txt_worth"
                android:textColor="@color/default_color_313131_white"
                android:textSize="@dimen/text_size_18" />

            <TextView
                style="@style/bg_ww"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_weight="1"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/txt_state"
                android:textColor="@color/default_color_313131_white"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>

        <View
            style="@style/view_line_1px"
            android:background="@color/day_line1_color" />

        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/list_credits"
            style="@style/bg_ff"
            skin:enable="true"/>
    </LinearLayout>

</RelativeLayout>